--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,234 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="40" data-price="8.50">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B078WTGZB1/ref=as_li_ss_tl?m=ATVPDKIKX0DER&ref=mpc_asin_image&th=1&linkCode=sl1&tag=3628-20&linkId=0a84e1ca7378de72b98fabaa6f5c3ef4&language=en_US"><img src="https://m.media-amazon.com/images/I/71PzOxJ5TnL._SR400,400_.jpg" alt="Pantene Foam Conditioner" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B078WTGZB1/ref=as_li_ss_tl?m=ATVPDKIKX0DER&ref=mpc_asin_image&th=1&linkCode=sl1&tag=3628-20&linkId=0a84e1ca7378de72b98fabaa6f5c3ef4&language=en_US">Pantene Foam Conditioner, Pro-V Daily Moisture Renewal, 6 oz (Triple Pack) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.50</span><span class="ori_price">$14.16</span>
+        <div class="tooltip_red">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code to the product that is being discounting.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $14.16</strong> with promo code: <strong>40HAIRFOAM2</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 18, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B078WTGZB1/ref=as_li_ss_tl?m=ATVPDKIKX0DER&ref=mpc_asin_image&th=1&linkCode=sl1&tag=3628-20&linkId=0a84e1ca7378de72b98fabaa6f5c3ef4&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="13.93">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07MFXJHNV/ref=as_li_ss_tl?m=A3FRP8T7BWOFSD&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=f98d377f4004d74e1956755a2782ba2f&language=en_US"><img src="https://m.media-amazon.com/images/I/71kSMluCE1L._SR400,400_.jpg" alt="Electronics Repair Screw Driver Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07MFXJHNV/ref=as_li_ss_tl?m=A3FRP8T7BWOFSD&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=f98d377f4004d74e1956755a2782ba2f&language=en_US">Electronics Repair Screw Driver Set with Alloy S2 Strong Steel, Magnetic Craftsman Screwdrivers Smartphone Repair Tool Kit 48 pcs </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.93</span><span class="ori_price">$19.90</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $19.90</strong> with promo code: <strong>306PIRV3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 22, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07MFXJHNV/ref=as_li_ss_tl?m=A3FRP8T7BWOFSD&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=f98d377f4004d74e1956755a2782ba2f&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/promocode/A1JQ0C21ENHHXF/ref=as_li_ss_tl?asin=B0789XB4CD&ref_=ac_promo_promo_link_3628-20&linkCode=sl2&tag=3628-20&linkId=663af5deceacc4ba56e872348c16f563&language=en_US"><img src="https://m.media-amazon.com/images/I/61mjva4XpFL._SR400,400_.jpg" alt="Sunglasses" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/promocode/A1JQ0C21ENHHXF/ref=as_li_ss_tl?asin=B0789XB4CD&ref_=ac_promo_promo_link_3628-20&linkCode=sl2&tag=3628-20&linkId=663af5deceacc4ba56e872348c16f563&language=en_US">WOOLIKE Men's Sports Style Polarized Sunglasses for Cycling Running Fishing Driving Golf Unbreakable...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>50% off at $19.99</strong> with promo code: <strong>50WOOLIKE</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/promocode/A1JQ0C21ENHHXF/ref=as_li_ss_tl?asin=B0789XB4CD&ref_=ac_promo_promo_link_3628-20&linkCode=sl2&tag=3628-20&linkId=663af5deceacc4ba56e872348c16f563&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="7.20">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07LGPDN37/ref=as_li_ss_tl?m=AC9X5VGDIQN71&ref=mpc_asin_image&th=1&linkCode=sl1&tag=3628-20&linkId=eee8bca0d283fcd4e87b28fbeabd8441&language=en_US"><img src="https://m.media-amazon.com/images/I/71JyAucp5UL._SR400,400_.jpg" alt="Vitamin C Serum" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07LGPDN37/ref=as_li_ss_tl?m=AC9X5VGDIQN71&ref=mpc_asin_image&th=1&linkCode=sl1&tag=3628-20&linkId=eee8bca0d283fcd4e87b28fbeabd8441&language=en_US">Vitamin C Serum, BREYLEE Anti-Aging Facial Serum with Hyaluronic Acid, Retinol, and Vitamin E Moisturizing Face Serum</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.20</span><span class="ori_price">$17.99</span></address>
+      <p><span>Take <strong>60% off at $17.99</strong> with promo code: <strong>60QFURS2</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07LGPDN37/ref=as_li_ss_tl?m=AC9X5VGDIQN71&ref=mpc_asin_image&th=1&linkCode=sl1&tag=3628-20&linkId=eee8bca0d283fcd4e87b28fbeabd8441&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="22.19">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07K1CGGJM/ref=as_li_ss_tl?m=A37XPG8A5GQ5V4&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=8ae35b668b59524b53b2e68de2c3290d&language=en_US"><img src="https://m.media-amazon.com/images/I/61h8B4SyJ0L._SR400,400_.jpg" alt="Wireless Charging Pad" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07K1CGGJM/ref=as_li_ss_tl?m=A37XPG8A5GQ5V4&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=8ae35b668b59524b53b2e68de2c3290d&language=en_US">Wireless Charging Pad, ZealSound Qi 10W Fast Triple Wireless Charger Station Fast Charging with USB Output</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.19</span><span class="ori_price">$36.98</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $36.98</strong> with promo code: <strong>40RBQOSQ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07K1CGGJM/ref=as_li_ss_tl?m=A37XPG8A5GQ5V4&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=8ae35b668b59524b53b2e68de2c3290d&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B073HC9V44/ref=as_li_ss_tl?m=AIRHG418VLWJT&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=021d25e30fcca8573c7ed5a739900679&language=en_US"><img src="https://m.media-amazon.com/images/I/91G-wcVZENL._SR400,400_.jpg" alt="Popsicle Molds Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B073HC9V44/ref=as_li_ss_tl?m=AIRHG418VLWJT&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=021d25e30fcca8573c7ed5a739900679&language=en_US">Popsicle Molds Set - BPA Free - 6 Ice Pop Makers + 1 Extra Mold + Silicone Funnel + Cleaning Brush + Recipes E-book - by Lebic</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$8.99</span></address>
+      <p><span>Take <strong>50% off at $8.99</strong> with promo code: <strong>507N7RMB</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B073HC9V44/ref=as_li_ss_tl?m=AIRHG418VLWJT&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=021d25e30fcca8573c7ed5a739900679&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="6.60">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B074DVXT6F/ref=as_li_ss_tl?m=A33QY7FS71Q4N6&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=70cdc716955b38814a07cc9d1869c38c&language=en_US"><img src="https://m.media-amazon.com/images/I/71MFrT82MJL._SR400,400_.jpg" alt="Yong Horse Men's Light Weight Slim Fit" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B074DVXT6F/ref=as_li_ss_tl?m=A33QY7FS71Q4N6&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=70cdc716955b38814a07cc9d1869c38c&language=en_US">Yong Horse Men's Light Weight Slim Fit Drawstring Open Bottom Sweatpants with Big Side Pockets</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.60</span><span class="ori_price">$21.99</span></address>
+      <p><span>Take <strong>70% off at $21.99</strong> with promo code: <strong>70A61MEN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B074DVXT6F/ref=as_li_ss_tl?m=A33QY7FS71Q4N6&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=70cdc716955b38814a07cc9d1869c38c&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="6.97">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B00Q66F05M/ref=as_li_ss_tl?m=A23QSD76O5YOIZ&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=0675df62f978b4ce7a86b297ea25160a&language=en_US"><img src="https://m.media-amazon.com/images/I/51mdR3a2z8L._SR400,400_.jpg" alt="Travel Waterproof Backpack Dry Bag" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B00Q66F05M/ref=as_li_ss_tl?m=A23QSD76O5YOIZ&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=0675df62f978b4ce7a86b297ea25160a&language=en_US">Travel Waterproof Backpack Dry Bag - 20L/ 35L Roll-top Recreation Dry Backpack Outdoor Sports Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.97</span><span class="ori_price">$13.95</span></address>
+      <p><span>Take <strong>50% off at $13.95</strong> with promo code: <strong>50SZBUBM</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 29, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B00Q66F05M/ref=as_li_ss_tl?m=A23QSD76O5YOIZ&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=0675df62f978b4ce7a86b297ea25160a&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07FNGWRC1/ref=as_li_ss_tl?m=A1JW50G9U4FMT6&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=b85350735a7952582f22bf4a84edec46&language=en_US"><img src="https://m.media-amazon.com/images/I/71Tlo+MWgFL._SR400,400_.jpg" alt="Camping Portable Knife" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07FNGWRC1/ref=as_li_ss_tl?m=A1JW50G9U4FMT6&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=b85350735a7952582f22bf4a84edec46&language=en_US">WITHARMOUR FINCHES 4" closed Pocket Folding Knife EDC Knife Sharp Mini Survival Camping Portable Knife</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>50% off at $29.99</strong> with promo code: <strong>50ZS3RCI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07FNGWRC1/ref=as_li_ss_tl?m=A1JW50G9U4FMT6&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=b85350735a7952582f22bf4a84edec46&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="8.10">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07JVPF7YZ/ref=as_li_ss_tl?m=A3UT3ESL3D2U4K&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=caa2e8f24df3f4691177ba488a158990&language=en_US"><img src="https://m.media-amazon.com/images/I/61QyrUwKS+L._SR400,400_.jpg" alt="20 Pairs Gel Eye Treatment Mask" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07JVPF7YZ/ref=as_li_ss_tl?m=A3UT3ESL3D2U4K&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=caa2e8f24df3f4691177ba488a158990&language=en_US">FreshMe 24K Gold Collagen Under Eye Patch for Women and Men - 20 Pairs Gel Eye Treatment Mask</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.10</span><span class="ori_price">$17.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>55% off at $17.99</strong> with promo code: <strong>55KFZ2LW</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 06, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07JVPF7YZ/ref=as_li_ss_tl?m=A3UT3ESL3D2U4K&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=caa2e8f24df3f4691177ba488a158990&language=en_US">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="13.92">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2JUkw4z"><img src="https://m.media-amazon.com/images/I/61pYEF9Qk1L._SR400,400_.jpg" alt="Gaming Headset" /></a>
