--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,220 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="40" data-price="5.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ip5C3f"><img src="https://m.media-amazon.com/images/I/61g0SnDDGeL._SR400,400_.jpg" alt="Hausbell Flashlights" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ip5C3f">Hausbell Flashlights, Handheld Flashlights, 7W Mini LED Flashlights, Tactical Flashlights, Zoomable, High Lumen, Water Resistant, 3 Light Modes for Camping, Hiking</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.39</span><span class="ori_price">$8.99</span>
+        <div class="tooltip_red">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code to the product that is being discounting.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $8.99</strong> with promo code: <strong>40YB88F8</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ip5C3f">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="8.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WqNYpk"><img src="https://m.media-amazon.com/images/I/71ex-JGnacL._SR400,400_.jpg" alt="ESSORT Bath Bombs Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WqNYpk">ESSORT Bath Bombs Set, 9 Pcs Natural Effervescent Essential Oil Bath Balls with Exquisite Box</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.80</span><span class="ori_price">$21.99</span></address>
+      <p><span>Take <strong>60% off at $21.99</strong> with promo code: <strong>60H4RB1Z</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WqNYpk">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wg1dEG"><img src="https://m.media-amazon.com/images/I/813r26YxQtL._SR400,400_.jpg" alt="Laptop Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wg1dEG">Laptop Backpack, Business Anti Theft Waterproof Travel Backpack with USB Charging Port for College School Computer Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.49</span><span class="ori_price">$26.99</span></address>
+      <p><span>Take <strong>50% off at $26.99</strong> with promo code: <strong>50Q7DGE1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wg1dEG">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HX1zMz"><img src="https://m.media-amazon.com/images/I/51DNN+sRb5L._SR400,400_.jpg" alt="POWEROWL Portable Charger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HX1zMz">POWEROWL Portable Charger 20000mAh with LED Flashlight Dual USB 4.8A Output & Input, Power Bank External Battery Pack Backup Cargador Portatil </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>40% off at $29.99</strong> with promo code: <strong>40EZFRW2</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 11, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HX1zMz">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31aoVpy"><img src="https://m.media-amazon.com/images/I/815qfZwLyVL._SR400,400_.jpg" alt="WONTEX Flannel Fleece Blanket" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31aoVpy">WONTEX Flannel Fleece Blanket Super Soft Plush Microfiber for King Size Bed, Grey, 108 x 90 inch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.09</span><span class="ori_price">$48.19</span></address>
+      <p><span>Take <strong>50% off at $48.19</strong> with promo code: <strong>50WONTEX</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 16, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31aoVpy">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="8.32">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IjRVCt"><img src="https://m.media-amazon.com/images/I/91syFkbLBeL._SR400,400_.jpg" alt="Colored Pencils" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IjRVCt">Colored Pencils, Atmoko Color Pencils Set with 72 Colored Pensils, Easy to Sharpen, [Hard to Break], Colored Pensils Bulk</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.32</span><span class="ori_price">$11.89</span>
+         <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $11.89</strong> with promo code: <strong>30BS2N3V</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IjRVCt">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="7.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ik5CS4"><img src="https://m.media-amazon.com/images/I/61gkqHq6ZYL._SR400,400_.jpg" alt="Fantiny Women’s Classics Canvas Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ik5CS4">Fantiny Women’s Classics Canvas Shoes Memory Foam Insole Flats Loafers Slip on Casual Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.20</span><span class="ori_price">$23.99</span></address>
+      <p><span>Take <strong>70% off at $23.99</strong> with promo code: <strong>70539MEK</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ik5CS4">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="220.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31bsYSj"><img src="https://m.media-amazon.com/images/I/41Dw+WfNmBL._SR400,400_.jpg" alt="Gaming Tablet" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31bsYSj">Gaming Tablet, Sysmarts 7 inch G6 Pro (Android 8.0, MTK6797 Helio X27, 10 Core, 4GB RAM + 64GB ROM, 3G/4G, 1200x1920 FHD IPS</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$220.99</span><span class="ori_price">$259.99</span></address>
+      <p><span>Take <strong>15% off at $259.99</strong> with promo code: <strong>15CYJ34K</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 20, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31bsYSj">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="70.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Iff4G0"><img src="https://m.media-amazon.com/images/I/612Oc6BDO7L._SR400,400_.jpg" alt="Robotic Vacuum Cleaner" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Iff4G0">Robotic Vacuum Cleaner, Mopping Robot 1300 Pa Strong Suction with Anti-Drop, Floor Robot Vacuum Cleaner</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$70.00</span><span class="ori_price">$139.99</span></address>
+      <p><span>Take <strong>50% off at $139.99</strong> with promo code: <strong>50UQXN1X</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 20, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Iff4G0">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ETY2fI"><img src="https://m.media-amazon.com/images/I/61Ge8XwPziL._SR400,400_.jpg" alt="Women's Comfort Working Nurse Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ETY2fI">Women's Comfort Working Nurse Shoes Adjustable Breathable Wedges Slip-on Walking Sneaker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.49</span><span class="ori_price">$28.99</span></address>
+      <p><span>Take <strong>50% off at $28.99</strong> with promo code: <strong>50SHOESN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ETY2fI">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="20.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2WKtSpG"><img src="https://m.media-amazon.com/images/I/61Pz75RpcuL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
